--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
+    "linkstate": "^1.1.1",
     "preact": "^8.2.6",
-    "preact-compat": "^3.17.0",
+    "preact-compat": "^3.18.0",
     "preact-router": "^2.5.7"
   },
   "jest": {
